# myhtml

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  INSTALL.md  Makefile  Makefile.bin.cfg  Makefile.cfg  README.md  api_breaking_changes.md  index.html  meson.build  myhtml.pc.in  params.json
debian/: changelog  control  copyright  libmyhtml-dev.install  libmyhtml.install  rules
devel/osx_ws.xcworkspace/: contents.xcworkspacedata
docs/html_standart_current_work_files/: content-venn.html  dfn.js  file-issue.js  index-idle.html  logo  parsing-model-overview.html  saved_resource  saved_resource.html  show_bug.cgi  specification
examples/: .gitignore  Makefile  attributes_high_level.c  callback_tree_node_high_level.c  chunks_high_level.c  custom_tree_high_level.c  detect_encoding_high_level.c  detect_encoding_in_meta_high_level.c  encoding_by_name_high_level.c  example.h  fragment_high_level  fragment_high_level.c  get_by_index_high_level.c  get_title_high_level  get_title_high_level.c  get_title_low_level  get_title_low_level.c  html2sexpr  html2sexpr.c  insert_in_appropriate_place_high_level.c  modify_and_serialize.c  nodes_by_attr_key_high_level.c  nodes_by_attr_value_high_level.c  parse_without_whitespace.c  print_tree_high_level  print_tree_high_level.c  replacing_node_attributes_low_level.c  serialization_high_level.c  string_manipulate_high_level.c  tokenizer_colorize_high_level.c  tokenizer_colorize_low_level.c
examples/myhtml/: Makefile.mk  attributes_high_level.c  callback_tree_node_high_level.c  chunks_high_level.c  custom_tree_high_level.c  example.h  fragment_high_level.c  get_title_high_level.c  get_title_low_level.c  html2sexpr.c  insert_in_appropriate_place_high_level.c  modify_and_serialize.c  nodes_by_attr_key_high_level.c  nodes_by_attr_value_high_level.c  parse_without_whitespace.c  print_tree_high_level.c  serialization_high_level.c  string_manipulate_high_level.c  tokenizer_colorize_high_level.c  tokenizer_colorize_low_level.c
include/: myhtml.h
include/mycore/: incoming.h  mystring.h  mythread.h  perf.h  thread_queue.h  utils.h
include/myencoding/: detect_resource.h  encoding.h  myosi.h  mystring.h  resource.h
include/myhtml/: api.h  api_encoding.h  callback.h  charef.h  (+30 more)
js/: work.js
myhtml/: Makefile  main.c  main.h  mcobject.c  mcobject.h  mcobject_async.c  mcobject_async.h  mctree.c  mctree.h  myhtml.c  myhtml.h  myhtml_def.h  myhtml_parse.c  myhtml_parse.h  myhtml_parse_doctype.c  myhtml_parse_doctype.h  myhtml_parse_script.c  myhtml_parse_script.h  myhtml_parser.c  myhtml_parser.h  myhtml_queue.c  myhtml_queue.h  myhtml_rules.c  myhtml_rules.h  myhtml_string.c  myhtml_string.h  myhtml_thread.c  myhtml_thread.h  myhtml_token.c  myhtml_token.h  myhtml_tokenizer.c  myhtml_tokenizer.h  myhtml_tokenizer_doctype.c  myhtml_tokenizer_doctype.h  myhtml_tokenizer_script.c  myhtml_tokenizer_script.h  myhtml_tree.c  myhtml_tree.h  myosi.c  myosi.h  (+24 more)
myhtml.xcodeproj/: project.pbxproj
projects/: CMakeLists.txt  Makefile  head.mk
projects/myhtml.xcodeproj/: project.pbxproj
projects/myhtml.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/myhtml.xcodeproj/project.xcworkspace/xcuserdata/alexanderborisov.xcuserdatad/: UserInterfaceState.xcuserstate
projects/myhtml.xcodeproj/xcuserdata/alexanderborisov.xcuserdatad/xcschemes/: myhtml.xcscheme  xcschememanagement.plist
projects/visual_studio/: myhtml.sln  myhtml.vcxproj  myhtml.vcxproj.filters
projects/visual_studio/dll/: dllmain.cpp  myhtml.cpp
rpm/: libmyhtml.spec
source/: Makefile  api.h  charef.c  charef.h  def.h  encoding.c  encoding.h  libmyhtml.dylib  meson.build  myhtml.c  myhtml.h  myosi.c  myosi.h  mystring.c  mystring.h  mytags.c  mytags.h  mytags_const.h  mytags_init.c  parser.c  parser.h  perf.c  rules.c  rules.h  tag.c  tag.h  tag_const.h  tag_init.c  tags.h  thread.c  thread.h  token.c  token.h  tokenizer.c  tokenizer.h  tokenizer_doctype.c  tokenizer_doctype.h  tokenizer_end.c  tokenizer_end.h  tokenizer_script.c  (+5 more)
source/mycore/: Makefile.mk  incoming.c  incoming.h  meson.build  myosi.c  myosi.h  mystring.c  mystring.h  mythread.c  mythread.h  perf.h  thread_queue.c  thread_queue.h  utils.c  utils.h
source/mycore/utils/: avl_tree.c  avl_tree.h  mchar_async.c  mchar_async.h  mcobject.c  mcobject.h  mcobject_async.c  mcobject_async.h  mcsimple.c  mcsimple.h  mcsync.c  mcsync.h  mctree.c  mctree.h  meson.build  mhash.c  mhash.h  resources.h
source/myencoding/: Makefile.mk  detect.c  detect_resource.h  encoding.c  encoding.h  meson.build  myosi.h  mystring.c  mystring.h  resource.h
source/myhtml/: Makefile  Makefile.mk  api.h  callback.c  callback.h  charef.c  charef.h  data_process.c  data_process.h  def.h  encoding.c  encoding.h  encoding_detect.c  encoding_detect_resource.h  encoding_resource.h  incoming.c  incoming.h  meson.build  myhtml.c  myhtml.h  myhtmlstring.c  mynamespace.c  mynamespace.h  mynamespace_resource.h  myosi.c  myosi.h  mystring.c  mystring.h  parser.c  parser.h  perf.c  rules.c  rules.h  serialization.c  serialization.h  stream.c  stream.h  tag.c  tag.h  tag_const.h  (+17 more)
source/myhtml/utils/: avl_tree.c  avl_tree.h  mchar_async.c  mchar_async.h  mcobject.c  mcobject.h  mcobject_async.c  mcobject_async.h  mcsimple.c  mcsimple.h  mcsync.c  mcsync.h  mctree.c  mctree.h  mhash.c  mhash.h  resources.h
source/myport/posix/: Rules.mk
source/myport/posix/mycore/: io.c  memory.c  perf.c  thread.c
source/myport/posix/mycore/utils/: mcsync.c
source/myport/windows_nt/: Makefile.mk  Rules.mk
source/myport/windows_nt/mycore/: io.c  perf.c  thread.c
source/myport/windows_nt/mycore/utils/: mcsync.c
source/utils/: mchar_async.c  mchar_async.h  mcobject.c  mcobject.h  mcobject_async.c  mcobject_async.h  mcsync.c  mcsync.h  mctree.c  mctree.h
stylesheets/: stylesheet.css
test/: Makefile  README.md  broken.html  commoncrawl.c  script.html  test.html  test_full.html
utils/: autodetect_single_byte.pl  encoding.pl  encoding_name.pl  entities.pl  forall.pl  namespace.pl  tags_init.pl  tags_style_default.pl  url.pl  url_resources.pl
(+56 files in other folders)
